# biped_robot

./: .gitignore  README.md
biped/: CMakeLists.txt  README.md  package.xml
biped_bringup/: CMakeLists.txt  README.md  package.xml
biped_bringup/launch/: biped.launch
biped_control/: CMakeLists.txt  README.md  package.xml
biped_control/config/: biped_control.yaml  biped_position_control.yaml
biped_control/include/biped_control/: inverted_pendulum.h  limp.h  walk_pattern.h  walk_primitive.h  walking_pattern.h
biped_control/include/biped_control/trajectory/: base_trajectory.h  polynomial_trajectory.h
biped_control/launch/: biped_control.launch
biped_control/src/: inverted_pendulum.cpp  limp.cpp  walk_pattern.cpp  walk_primitive.cpp  walking_pattern.cpp
biped_control/src/nodes/: biped_control_test_node.cpp  inverted_pendulum_test_node.cpp  limp_test_node.cpp  walking_pattern_test_node.cpp
biped_control/src/trajectory/: polynomial_trajectory.cpp
biped_description/: CMakeLists.txt  README.md  package.xml
biped_description/launch/: display.launch
biped_description/rviz/: biped.rviz
biped_description/urdf/: biped.urdf  biped.urdf.xacro
biped_gazebo/: CMakeLists.txt  README.md  package.xml
biped_gazebo/config/: biped_control.yaml
biped_gazebo/launch/: biped_gazebo.launch
biped_kinematics_dynamics/: CMakeLists.txt  README.md  package.xml
biped_kinematics_dynamics/include/biped_kinematics_dynamics/: robot_tree_publisher.h
biped_kinematics_dynamics/include/biped_kinematics_dynamics/math/: lie_groups.h
biped_kinematics_dynamics/include/biped_kinematics_dynamics/robot_tree/: link_info.h  robot_joint.h  robot_link.h  robot_tree.h
biped_kinematics_dynamics/include/biped_kinematics_dynamics/robot_tree/solvers/: robot_tree_ik_solver.h  robot_tree_ik_solver_analytical.h  robot_tree_ik_solver_numerical.h
biped_kinematics_dynamics/include/biped_kinematics_dynamics/solvers/: biped_ik_solver_analytical.h  biped_ik_solver_numerical.h
biped_kinematics_dynamics/src/: link_info.cpp  robot_tree_publisher.cpp
biped_kinematics_dynamics/src/nodes/: biped_kinematics_node.cpp  kinematics_node.cpp
biped_kinematics_dynamics/src/robot_tree/: link_info.cpp  robot_joint.cpp  robot_link.cpp  robot_tree.cpp
biped_kinematics_dynamics/src/robot_tree/solvers/: robot_tree_ik_solver.cpp  robot_tree_ik_solver_analytical.cpp  robot_tree_ik_solver_numerical.cpp
biped_kinematics_dynamics/src/solvers/: biped_ik_solver_analytical.cpp  biped_ik_solver_numerical.cpp
biped_msgs/: CMakeLists.txt  README.md  package.xml
biped_rviz/: CMakeLists.txt  README.md  package.xml
biped_rviz/include/biped_rviz/markers/: basic_marker.h
biped_rviz/include/biped_rviz/plugins/: plugin.h
biped_rviz/src/markers/: basic_marker.cpp
biped_rviz/src/nodes/: biped_marker_test_node.cpp
