<?xml version="1.0"?>
<package format="2">
    <name>biped_bringup</name>
    <version>0.0.1</version>
    <description>
        biped_bringup
    </description>

    <license>TODO</license>

    <maintainer email="leon112rus@gmail.com">Artem Kovalev</maintainer>

    <url type="repository">https://github.com/toastytoast/biped</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>biped_description</depend>

    <export>
    </export>
</package>
