<?xml version="1.0"?>
<package format="2">
    <name>biped_gazebo</name>
    <version>0.0.1</version>
    <description>
        biped_gazebo
    </description>

    <license>TODO</license>

    <maintainer email="leon112rus@gmail.com">Artem Kovalev</maintainer>

    <url type="repository">https://github.com/toastytoast/biped</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>biped_description</depend>
    <depend>biped_bringup</depend>
    <depend>rospy</depend>
    <depend>gazebo_ros</depend>

    <export>
    </export>
</package>
