<?xml version="1.0"?>
<package format="2">
    <name>biped_kinematics_dynamics</name>
    <version>0.0.1</version>
    <description>
        biped_kinematics_dynamics
    </description>

    <license>TODO</license>

    <maintainer email="leon112rus@gmail.com">Artem Kovalev</maintainer>

    <url type="repository">https://github.com/toastytoast/biped</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>urdf</depend>
    <depend>biped_msgs</depend>

    <export>
    </export>
</package>
