<?xml version="1.0"?>
<package format="2">
    <name>biped_msgs</name>
    <version>0.0.1</version>
    <description>
        biped_msgs
    </description>

    <license>TODO</license>

    <maintainer email="leon112rus@gmail.com">Artem Kovalev</maintainer>

    <url type="repository">https://github.com/toastytoast/biped</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>control_msgs</depend>
    <depend>trajectory_msgs</depend>

    <export>
    </export>
</package>
